packages/shared-skills/skills/programming/fixtures/java/no-excuse/fail/mutable-static/MutableStaticCase.java
package sample.bad;

class MutableStaticCase {
    private static int count;
}
